@@ -878,7 +878,7 @@ struct Example:
         for (int i = 0; i < linkCount; ++i) ImGui::Text("Link (%p)", selectedLinks[i].AsPointer());
         ImGui::Unindent();
 
-        if (ImGui::IsKeyPressed(ImGui::GetKeyIndex(ImGuiKey_Z)))
+        if (ImGui::IsKeyPressed(ImGuiKey_Z))
             for (auto& link : m_Links)
                 ed::Flow(link.ID);
 
@@ -1108,11 +1108,7 @@ struct Example:
 
                         ed::PushStyleVar(ed::StyleVar_PinArrowSize, 10.0f);
                         ed::PushStyleVar(ed::StyleVar_PinArrowWidth, 10.0f);
-#if IMGUI_VERSION_NUM > 18101
                         ed::PushStyleVar(ed::StyleVar_PinCorners, ImDrawFlags_RoundCornersBottom);
-#else
-                        ed::PushStyleVar(ed::StyleVar_PinCorners, 12);
-#endif
                         ed::BeginPin(pin.ID, ed::PinKind::Input);
                         ed::PinPivotRect(inputsRect.GetTL(), inputsRect.GetBR());
                         ed::PinRect(inputsRect.GetTL(), inputsRect.GetBR());
@@ -1154,11 +1150,7 @@ struct Example:
                     ImGui::Spring(1, 0);
                     outputsRect = ImGui_GetItemRect();
 
-#if IMGUI_VERSION_NUM > 18101
                     ed::PushStyleVar(ed::StyleVar_PinCorners, ImDrawFlags_RoundCornersTop);
-#else
-                    ed::PushStyleVar(ed::StyleVar_PinCorners, 3);
-#endif
                     ed::BeginPin(pin.ID, ed::PinKind::Output);
                     ed::PinPivotRect(outputsRect.GetTL(), outputsRect.GetBR());
                     ed::PinRect(outputsRect.GetTL(), outputsRect.GetBR());
@@ -1193,13 +1185,8 @@ struct Example:
                 //    drawList->PathStroke(col, true, thickness);
                 //};
 
-#if IMGUI_VERSION_NUM > 18101
                 const auto    topRoundCornersFlags = ImDrawFlags_RoundCornersTop;
                 const auto bottomRoundCornersFlags = ImDrawFlags_RoundCornersBottom;
-#else
-                const auto    topRoundCornersFlags = 1 | 2;
-                const auto bottomRoundCornersFlags = 4 | 8;
-#endif
 
                 drawList->AddRectFilled(inputsRect.GetTL() + ImVec2(0, 1), inputsRect.GetBR(),
                     IM_COL32((int)(255 * pinBackground.x), (int)(255 * pinBackground.y), (int)(255 * pinBackground.z), inputAlpha), 4.0f, bottomRoundCornersFlags);
@@ -1263,11 +1250,7 @@ struct Example:
                         inputsRect.Min.y -= padding;
                         inputsRect.Max.y -= padding;
 
-#if IMGUI_VERSION_NUM > 18101
                         const auto allRoundCornersFlags = ImDrawFlags_RoundCornersAll;
-#else
-                        const auto allRoundCornersFlags = 15;
-#endif
                         //ed::PushStyleVar(ed::StyleVar_PinArrowSize, 10.0f);
                         //ed::PushStyleVar(ed::StyleVar_PinArrowWidth, 10.0f);
                         ed::PushStyleVar(ed::StyleVar_PinCorners, allRoundCornersFlags);
@@ -1324,13 +1307,8 @@ struct Example:
                         outputsRect.Min.y += padding;
                         outputsRect.Max.y += padding;
 
-#if IMGUI_VERSION_NUM > 18101
                         const auto allRoundCornersFlags = ImDrawFlags_RoundCornersAll;
                         const auto topRoundCornersFlags = ImDrawFlags_RoundCornersTop;
-#else
-                        const auto allRoundCornersFlags = 15;
-                        const auto topRoundCornersFlags = 3;
-#endif
 
                         ed::PushStyleVar(ed::StyleVar_PinCorners, topRoundCornersFlags);
                         ed::BeginPin(pin.ID, ed::PinKind::Output);
